k8s-lab/0-bootstrap/istio-gateway/manifests/1-manifest/v1-namespace-default-istio-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi"},"name":"istio-gateway"}}
  labels:
    app.kubernetes.io/managed-by: pulumi
  name: istio-gateway
